# pomodoro

./: BUILD.gn  README.md  config.json
software/: pmdr_log.c  pmdr_main.c  pmdr_os.c  pmdr_wifi.c
software/include/: pmdr_config.h  pmdr_def.h  pmdr_error.h  pmdr_log.h  pmdr_os.h  pmdr_wifi.h
